# FastAPI-Onboarding

./: .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
fast-api-ex/sql_app/: main.py
git-hooks/: commit-msg.py
migrations/: env.py
onboarding_app/: crawler.py  config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py  utils.py
onboarding_app/endpoints/: comment.py  stock.py  user.py  wishlist.py  wishlistXstock.py
onboarding_app/queries/: comment.py  stock.py  user.py  wishlist.py  wishlistXstock.py
onboarding_app/resources/: data_1205_20220930.csv  data_3035_20220929.csv
onboarding_app/tests/: conftest.py  test_comment.py  test_stock.py  test_user.py  test_wishlist.py  utils.py
scripts/: dev_shell.sh  git-hooks.sh  run_server.sh  test.sh  update_db.sh  upsert_stock.py
