[tool.poetry]
name = "portfolio-toy-project-mjkim"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "portfolio_toy_project_mjkim"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.83.0"
email-validator = "^1.2.1"
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.41"



[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
